2006-09-26  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmconfig.c, gui/greeter/greeter.c, gui/greeter/greeter_parser.c:
	  Fix memory leaks.  Fixes bug #357879.  Patch provided by Kjartan
	  Maraas. <kmaraas@gnome.org>.

2006-09-26  Brian Cameron  <brian.cameron@sun.com>

	* daemon/slave.c, daemon/verify-crypt.c, daemon/verify-pam.c,
	  daemon/verify-shadow.c, gui/gdmcommon.c: Fix so that if 
	  timed login script returns an invalid user, timed login is
	  not turned on.  Fixes bug #340148.  Patch by Andrew
	  (andrewz@springsrescuemission.org).
	* gui/gdmuser.c: Fix gdm_is_user_valid so it is more simple,
	  like implemented in daemon/slave.c by Andrew.

2006-09-23  Brian Cameron  <brian.cameron@sun.com>

	* gui/gdmflexiserver.c: Add g_type_init() since this is needed
	  for -a (authentication) code to work.

2006-09-22  Brian Cameron  <brian.cameron@sun.com>

	* config/gdm.conf.in, daemon/filecheck.c, daemon/gdm.h
	  daemon/gdmconfig.c, docs/C/gdm.xml: Now gdm.conf has
 	  SupportAutomount option which, when turned on, changes
	  the way that GDM accessess the user's $HOME/.dmrc file
	  so that automounted $HOME directories can be configured
	  to work even with the automounter isn't started with
	  the --ghost option.  This feature is off by default.
	  This addresses RFE bug #356869.  Patch by 
	  Jerzy Borkowski <jubork@ncac.torun.pl>.

2006-09-11  Brian Cameron  <brian.cameron@sun.com>

	* daemon/gdm.c: Move call to get GDM_KEY_SYSTEM_MENU
	  until after authentication check.  Fixes bug
	  #352838.  Patch by Frederic Crozat
	  <fcrozat@mandriva.com>.
	* docs/C/gdm.xml: Make gdmdynamic section a bit more
	  clear.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

        * Release 2.16.0:
        * NEWS: Updated.
        * configure.ac: Update to new release version.

2006-09-04  Brian Cameron  <brian.cameron@sun.com>

	* docs/C/gdm.xml, docs/es/gdm.xml, docs/uk/gdm.xml:
	  Accidently putback docs fix after freeze.  Backing
	  out.
