@@ -1,3 +1,9 @@
+2006-09-27  Brian Cameron  <brian.cameron@sun.com>
+
+	* gui/gdmconfig.c, gui/greeter/greeter_parser.c:  Fix more
+	  memory leaks.  Fixes bug #357879.  Patch provided by Kjartan
+	  Maraas. <kmaraas@gnome.org>.
+
 2006-09-26  Brian Cameron  <brian.cameron@sun.com>
 
 	* gui/gdmconfig.c, gui/greeter/greeter.c, gui/greeter/greeter_parser.c:
